--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,5 +75,9 @@ body {
 @layer utilities {
   .bordered-wrapper {
     @apply border border-gray-800;
+
+    .focus-input {
+      @apply focus:outline-purple-500 focus:outline-2 focus:outline-offset-4;
+    }
   }
 }
